--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <title>Tech Support Center</title>
   <meta name="description" content="Your one-stop solution for all computer maintenance and support needs" />
   <meta name="author" content="Tech Support" />
+
+  <link rel="icon" href="logo.ico" />
 
   <meta property="og:title" content="Tech Support Center" />
   <meta property="og:description" content="Your one-stop solution for all computer maintenance and support needs" />
