--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Tech Support Center</title>
+  <title>Thomson Support Center</title>
   <meta name="description" content="Your one-stop solution for all computer maintenance and support needs" />
-  <meta name="author" content="Tech Support" />
+  <meta name="author" content="Thomson Support Center" />
 
   <link rel="icon" href="logo.ico" />
 
